# rbmo

./: .gitignore  README.md
examples/: binding.sparql  contact.py  tcs.bgnl  tcs.bngl  tcs.kappa  tcs.ttl
krdf/: README.md  Tests.hs  kpart.hs  krdf.cabal  krdf.hs  stack.yaml
krdf/Krdf/: Kappa.lhs  Reaction.lhs  Utils.hs
krdf/Krdf/Internal/: KappaAST.lhs  KappaParser.lhs  KappaQuotes.lhs  KappaUtil.lhs  ReactionQuotes.lhs
krdf/Krdf/Kappa/: Rdf.lhs  Vocabulary.lhs
krdf/Test/: KappaT.lhs  ReactionT.lhs  semantic.sh
ontology/: rbmo.ms.owl  rbmo.owl  rbmo.ttl
